fixed the misalignment of section headings on homepage (IE7)

--- a/wp-content/themes/mojintranet/assets/css/src/content/homepage/_main.scss
+++ b/wp-content/themes/mojintranet/assets/css/src/content/homepage/_main.scss
@@ -2,6 +2,7 @@
   .category-name {
     @extend %large-heading;
     border-bottom: 2px solid $grey-1;
+    margin-top: 20px;
   }
 
   .see-all-container {
